Fixes nav alignment

--- a/templates/styles/site.css
+++ b/templates/styles/site.css
@@ -349,6 +349,7 @@ h1.siteName {
     padding-left: 0;
     display: flex;
     flex-flow: wrap;
+    align-items: baseline;
   }
 
 }
